<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/smarthome">

    <RelativeLayout
        android:id="@+id/layoutTop"
        android:layout_width="match_parent"
        android:layout_height="130dp" >
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layoutTop" >
        <android.support.v7.widget.CardView
            android:id="@+id/cv_one_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:elevation="10dp"
            app:cardBackgroundColor="#85FFFFFF"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:cardPreventCornerOverlap="false"
            app:cardUseCompatPadding="true"
            android:layout_marginRight="12dp"
            android:layout_marginLeft="12dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registerusername"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:padding="18dp"
                    android:textSize="18sp"
                    android:id="@+id/et_username"
                    android:textStyle="bold"
                    android:inputType="text"
                    android:drawableLeft="@drawable/username"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/loginedittextstyle"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userId"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:padding="18dp"
                    android:textSize="18sp"
                    android:id="@+id/et_password"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/lock"
                    android:inputType="text"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/loginedittextstyle"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registeremailId"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:padding="18dp"
                    android:id="@+id/et_email"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/loginedittextstyle"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/registermobilenumber"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:padding="18dp"
                    android:textSize="18sp"
                    android:id="@+id/mobile"
                    android:textStyle="bold"
                    android:drawableLeft="@drawable/mobilenumber"
                    android:inputType="number"
                    android:textColor="@color/colorBlack"
                    android:background="@drawable/loginedittextstyle"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/overlapImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@id/layoutBottom"
        android:layout_centerHorizontal="true"
        android:src="@drawable/chrome_spidey"
        android:layout_marginBottom="-30dp"
        app:civ_border_color="@android:color/transparent"
        app:civ_border_overlay="true"
        app:civ_fill_color="#50BC8F8F"
        app:civ_border_width="1dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/layoutBottom"
        >
        <Button
            android:id="@+id/bt_go"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="15dp"
            android:layout_gravity="center"
            android:elevation="15dp"
            android:text="@string/register"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/rippleeffect_roundbutton"
            />
    </LinearLayout>
</RelativeLayout>

